--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
+
 <!DOCTYPE html>
 <html lang='en'>
   <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>first project</title>
   </head>
   <body>
-
+    <h1>Hello, Code School!</h1>
+      <ul>
+        <li>Ruby</li>
+        <li>Python</li>
+    </ul>
   </body>
 </html>
